--- a/style.css
+++ b/style.css
@@ -15,5 +15,10 @@ body {
 
 #upperHeader {
     margin: auto;
-    width: 920px;
+    width: 1280px;
+}
+
+#upperHeader {
+    margin: auto;
+    width: 1280px;
 }
