--- a/style.css
+++ b/style.css
@@ -5,20 +5,34 @@
 
 body {
     font-family: arial, helvetica, "sans serif";
+    margin: 0px;
 }
 
 #header {
-    background-color: #4198a0;
     width: 100%;
-    height: 180px;
+    height: 120px;
 }
 
 #upperHeader {
+    background: url(assets/images/header_bg.jpg);
+    background-repeat: no-repeat;   
+    background-color: #004489;
     margin: auto;
-    width: 1280px;
+    height: 80px;
 }
 
-#upperHeader {
+#upperHeader image {
+    float: right;
+}
+
+#lowerHeader {
+    background-color: #013A75;
     margin: auto;
+    height: 40px;
+}
+
+#headerContainer {
     width: 1280px;
+    height: 100%;
+    margin: auto;
 }
