login webpage php klopt

--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ body {
     height: 100%;
     margin: auto;
 }
+
+#content{
+    margin: auto;
+    width: 1000px;
+    height: 1000px;
+    background-color: gray;
+}
